@@ -1,21 +1,28 @@
-# Quantum++
-#
-# Copyright (c) 2013 - 2017 Vlad Gheorghiu (vgheorgh@gmail.com)
 #
 # This file is part of Quantum++.
 #
-# Quantum++ is free software: you can redistribute it and/or modify
-# it under the terms of the GNU General Public License as published by
-# the Free Software Foundation, either version 3 of the License, or
-# (at your option) any later version.
+# MIT License
 #
-# Quantum++ is distributed in the hope that it will be useful,
-# but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-# GNU General Public License for more details.
+# Copyright (c) 2013 - 2018 Vlad Gheorghiu (vgheorgh@gmail.com)
 #
-# You should have received a copy of the GNU General Public License
-# along with Quantum++.  If not, see <http://www.gnu.org/licenses/>.
+# Permission is hereby granted, free of charge, to any person obtaining a copy
+# of this software and associated documentation files (the "Software"), to deal
+# in the Software without restriction, including without limitation the rights
+# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+# copies of the Software, and to permit persons to whom the Software is
+# furnished to do so, subject to the following conditions:
+#
+# The above copyright notice and this permission notice shall be included in
+# all copies or substantial portions of the Software.
+#
+# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+# SOFTWARE.
+#
 
 CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)
 PROJECT(qpp_testing)
@@ -24,22 +31,28 @@ PROJECT(qpp_testing)
 INCLUDE_DIRECTORIES(../include)
 
 #### Eigen3
-MESSAGE("-- Detecting Eigen3")
-FIND_PACKAGE(Eigen3 3.0 QUIET NO_MODULE) # try to find it automatically
-IF(NOT TARGET Eigen3::Eigen) # did not find Eigen3 automatically
-    IF(NOT EIGEN3_INCLUDE_DIR) # no manual location specified either
-        MESSAGE(FATAL_ERROR
-            "Eigen3 not detected! Please point EIGEN3_INCLUDE_DIR\
-            to your Eigen3 location when building with cmake,\
-            for example\ 
-            cmake .. -DEIGEN3_INCLUDE_DIR=$HOME/eigen")
-    ELSE() # manual location specified
-        MESSAGE("-- Detecting Eigen3 - done (location manually specified)")
+MESSAGE(STATUS "Detecting Eigen3")
+SET(EIGEN3_INCLUDE_DIR "" CACHE PATH "Path to Eigen3")
+# Location manually specified
+IF (NOT ${EIGEN3_INCLUDE_DIR} STREQUAL "")
+    IF (IS_DIRECTORY ${EIGEN3_INCLUDE_DIR})
+        MESSAGE(STATUS "Detecting Eigen3 - done (in ${EIGEN3_INCLUDE_DIR})")
         INCLUDE_DIRECTORIES(SYSTEM "${EIGEN3_INCLUDE_DIR}")
-    ENDIF()
-ELSE()
-    MESSAGE("-- Detecting Eigen3 - done")
-ENDIF()
+    ELSE ()
+        MESSAGE(FATAL_ERROR "Invalid path to Eigen3 installation")
+    ENDIF ()
+ELSE () # Try to find it automatically
+    FIND_PACKAGE(Eigen3 3.0 QUIET NO_MODULE)
+    IF (NOT TARGET Eigen3::Eigen) # did not find Eigen3 automatically
+        MESSAGE(FATAL_ERROR
+                "Eigen3 not detected! Please point EIGEN3_INCLUDE_DIR\
+            to your Eigen3 location when building with cmake,\
+            for example\
+
+            cmake -DEIGEN3_INCLUDE_DIR=$HOME/eigen ..")
+    ENDIF ()
+    MESSAGE(STATUS "Detecting Eigen3 - done")
+ENDIF ()
 
 #### Use C++11
 IF(CYGWIN)
@@ -106,7 +119,7 @@ IF (${WITH_OPENMP})
     IF (${CMAKE_CXX_COMPILER_ID} STREQUAL "GNU")
         SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")
         SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS}")
-    #### Clang but not AppleClang
+        #### Clang but not AppleClang
     ELSEIF (${CMAKE_CXX_COMPILER_ID} STREQUAL "Clang")
         IF (CMAKE_CXX_COMPILER_VERSION VERSION_GREATER "3.7")
             # Set the OpenMP library/headers location
@@ -132,7 +145,9 @@ IF (${WITH_OPENMP})
             ENDIF ()
             # everything is OK
             INCLUDE_DIRECTORIES(SYSTEM "${CLANG_LIBOMP_INCLUDE}")
-            SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp=libomp")
+            SET(CLANG_FOPENMP "libomp" CACHE STRING
+                    "Flag to be passed to -fopenmp argument, libomp by default")
+            SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp=${CLANG_FOPENMP}")
             SET(CMAKE_EXE_LINKER_FLAGS
                     "${CMAKE_EXE_LINKER_FLAGS} -L${CLANG_LIBOMP_LINK}")
         ENDIF ()
